Fixed spacing between each section

--- a/Style_Guide/css/main.css
+++ b/Style_Guide/css/main.css
@@ -52,8 +52,8 @@ body {
 
 .header-wrap h1{
   color: #FFF;
-  font-size: 68px;
-  line-height: 115%;
+/*  font-size: 68px;
+*/  line-height: 115%;
   margin-bottom: 25px;
 
 }
@@ -115,7 +115,7 @@ body {
 
 #tako{
   padding: 0em;
-  margin-bottom: -3em;
+  margin-bottom: -2em;
 }
 
 /* ------------------- */
@@ -124,8 +124,8 @@ body {
 
 section:not([id]) {
   margin: 2em 0;
-  padding: 0.5em 0 2em 0;
-  border-bottom: 0.15em dotted #DEDEDE;
+  padding: 2em 0 4em 0;
+  border-bottom: 0.15em dotted #BBB;
 }
 
 section p {
@@ -597,7 +597,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 h1{
-  font-size: 3.5em;
+  font-size: 4.5em;
   margin: 1.5rem 0;
 }
 
